--- a/thesispreamble.sty
+++ b/thesispreamble.sty
@@ -71,9 +71,9 @@
 
 \subject{Biological Sciences} % Your subject area, this is not currently used anywhere in the template, print it elsewhere with \subjectname
 \keywords{} % Keywords for your thesis, this is not currently used anywhere in the template, print it elsewhere with \keywordnames
-\university{\href{http://www.university.com}{Federal University of Campina Grande}} % Your university's name and URL, this is used in the title page and abstract, print it elsewhere with \univname
-\department{\href{http://department.university.com}{Department or Chemical Engineering}} % Your department's name and URL, this is used in the title page and abstract, print it elsewhere with \deptname
-\group{\href{http://researchgroup.university.com}{Laboratory of Numerical Experimentation of Processes (LENP)}} % Your research group's name and URL, this is used in the title page, print it elsewhere with \groupname
+\university{Federal University of Campina Grande} % Your university's name and URL, this is used in the title page and abstract, print it elsewhere with \univname
+\department{Department or Chemical Engineering} % Your department's name and URL, this is used in the title page and abstract, print it elsewhere with \deptname
+\group{Laboratory of Numerical Experimentation of Processes (LENP)} % Your research group's name and URL, this is used in the title page, print it elsewhere with \groupname
 \faculty{\href{http://faculty.university.com}{Faculty Name}} % Your faculty's name and URL, this is used in the title page and abstract, print it elsewhere with \facname
 
 \AtBeginDocument{
