--- a/textual/2-desenvolvimento.tex
+++ b/textual/2-desenvolvimento.tex
@@ -279,12 +279,13 @@ colchetes, \verb|A| e \verb|S| definem entre sigla e símbolo, respectivamente.
 Também é possível usar colchetes para indicar o início de uma expressão
 matemática que não é numerada.
 
-\[
-\left|\sum_{i=1}^n a_ib_i\right|
-\le
-\left(\sum_{i=1}^n a_i^2\right)^{1/2}
-\left(\sum_{i=1}^n b_i^2\right)^{1/2}
-\]
+\begin{equation*}
+  \left|\sum_{i=1}^n a_ib_i\right|
+  \le
+  \left(\sum_{i=1}^n a_i^2\right)^{1/2}
+  \left(\sum_{i=1}^n b_i^2\right)^{1/2}
+\end{equation*}
+
 
 Consulte mais informações sobre expressões matemáticas em
 \url{https://github.com/abntex/abntex2/wiki/Referencias}.
