--- a/thesispreamble.sty
+++ b/thesispreamble.sty
@@ -13,6 +13,8 @@
 \usepackage{nomencl}
 \usepackage{subfiles}
 \usepackage{etoolbox}
+\usepackage{amsmath}
+
 % ------------------------------------------------------------------------------
 		
 % ------------------------------------------------------------------------------
